# todo-rs

./: .gitignore  Cargo.toml
todo-adapter/: Cargo.toml
todo-app/: Cargo.toml
todo-domain/: Cargo.toml
todo-presenter/: Cargo.toml
