[package]
name = "todo-presenter"
version = "0.1.0"
edition = "2021"

[dependencies]
todo-app = { path = "../todo-app" }
todo-adapter = { path = "../todo-adapter" }
todo-domain = { path = "../todo-domain" }
anyhow = "1.0.78"
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.0"
hyper = { version = "1.1.0", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }